# sphinxserve

./: .travis.yml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
pex/: Dockerfile  README.rst  pex_requirements.txt  setup.cfg  setup.py
scripts/: sphinxserve
sphinxserve/: __init__.py  __main__.py  lib.py
tests/: coverage.ini  pytest.ini  test_requirements.txt  test_sphinxserve.py
