[metadata]
name = sphinxserve
summary = sphinxserve renders sphinx docs monitoring file changes
description-file =
    README.rst
author = Daniel Mizyrycki
author_email = mzdaniel@glidelink.net
home-page = https://github.com/mzdaniel/sphinxserve
download_url = https://pypi.python.org/pypi/sphinxserve
keywords =
    sphinx
    documentation
    restructuredtext
license = MIT License
classifier =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[files]
packages = sphinxserve
scripts =  scripts/sphinxserve
