[metadata]
name = sphinxserve-pex
version = 0.7.3
summary = sphinxserve pex with readthedocs, bootstrap and revealjs themes
description-file =
    README.rst
author = Daniel Mizyrycki
author_email = mzdaniel@glidelink.net
home-page = https://github.com/mzdaniel/sphinxserve
download_url = https://pypi.python.org/pypi/sphinxserve
keywords =
    sphinx
    bootstrap
    revealjs
    documentation
    restructuredtext
license = MIT License
classifier =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing :: Markup
    Topic :: Utilities
platform = Linux

[files]
packages = sphinxserve_pex
scripts =  scripts/sphinxserve
